--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
             <ul class="lista-menu">           
-             <li class="lista-menu__titulo"> horses</li>
+             <li class="lista-menu__titulo"><a href="#"> horses </a></li>
              <li class="lista-menu__titulo"><a href="#"> agro </a></li>
-             <liclass="lista-menu__titulo"><a href="#">pecuaria</a></li>
+             <li class="lista-menu__titulo"><a href="#">pecuaria</a></li>
             </ul>
 
 
