--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
                 <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
             <ul class="lista-menu">           
-             <li class="lista-menu__titulo"><a href="#"> horses </a></li>
-             <li class="lista-menu__titulo"><a href="#"> agro </a></li>
-             <li class="lista-menu__titulo"><a href="#">pecuaria</a></li>
+             <li class="lista-menu__titulo"><a href="#"> Botas</a></li>
+             <li class="lista-menu__titulo"><a href="#"> Cintos</a></li>
+             <li class="lista-menu__titulo"><a href="#">Chapéus</a></li>
             </ul>
 
 
-           <a href="#"><img class="container__imagem" src="img/logo 1.svg" alt="logotipo da biblioteca start"></a>
-           <h1 class="titulo__cabecalho">Wilson Joffre</h1>
+           <a href="#"><img class="container__imagem" src="img/logo.jpeg" alt="logotipo da biblioteca start"></a>
+           <h1 class="titulo__cabecalho">CountryLife</h1>
         </div>
         <div class="container">
-           <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt="meus Favoritos"></a>
+           <a href="#"><img class="container__imagem imagem__maior" src="img/Favoritos.svg" alt="meus Favoritos"></a>
            <a href="#"><img class="container__imagem" src="img/Emprestimos.svg" alt="meus empréstimos"></a>
-           <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt="meu perfil"></a>
+           <a href="#"><img class="container__imagem "src="img/Usuario.svg" alt="meu perfil"></a>
         </div>
     </header>
     <section class="gridimg">
@@ -81,6 +81,8 @@
                 <h1 class="titulo">countrylife</h1>
             </div>
         </div>
+     
+
 
     </section>
 </body>
